--- a/app/src/main/res/layout/fragment_list_products.xml
+++ b/app/src/main/res/layout/fragment_list_products.xml
@@ -24,6 +24,46 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clLoading"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/black"
+                android:backgroundTint="@color/black_alpha"
+                android:elevation="12dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/rvProducts"
+                app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
+                app:showLoading="@{viewModel.uiState.loading}">
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/loading_text"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="normal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/progressBar"
+                    app:layout_constraintVertical_bias="0.0" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/materialToolbar"
                 android:layout_width="match_parent"
@@ -53,10 +93,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:drawableEnd="@android:drawable/ic_menu_search"
+                android:drawableTint="@color/white"
                 android:ems="10"
                 android:hint="@string/search_text_hint"
-                android:text="@={viewModel.textFilter}"
                 android:inputType="text"
+                android:text="@={viewModel.textFilter}"
                 android:textColor="@color/white"
                 android:textColorHint="@color/material_dynamic_neutral70"
                 app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
